feat: complete phase 5 page manager
